# SoftwareAgent

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  software_agent-0.1.0-py3-none-any.whl  utils.py
deployment/: deploy.py
software_agent/: agent.py  software_list.py
